# UE4-GamePlay-Analytics

./: .gitignore  README.md
UE4-Analytics-Tool/: Build-Solution.bat  CMakeLists.txt  LOG.txt  ReadMe.txt  conanfile.txt  main.cpp
UE4-Analytics-Tool/Logs/Gameplay-2016.12.09-14.36.22/: Player Forward - 2016.12.09-14.36.22.txt  Player Position - 2016.12.09-14.36.22.txt  Player Power - 2016.12.09-14.36.22.txt
UE4-Analytics-Tool/Logs/Gameplay-2016.12.16-14.19.48/: Player Forward - 2016.12.16-14.19.48.txt  Player Position - 2016.12.16-14.19.48.txt  Player Power - 2016.12.16-14.19.48.txt
UE4-Analytics-Tool/Logs/Gameplay-2017.01.02-02.11.59/: Player Forward - 2017.01.02-02.11.59.txt  Player Position - 2017.01.02-02.11.59.txt  Player Power - 2017.01.02-02.11.59.txt
UE4-Analytics-Tool/Logs/Gameplay-2017.01.02-20.35.10/: Player Forward - 2017.01.02-20.35.10.txt  Player Position - 2017.01.02-20.35.10.txt  Player Power - 2017.01.02-20.35.10.txt
UE4-Analytics-Tool/Logs/Gameplay-2017.01.02-20.35.33/: Player Forward - 2017.01.02-20.35.33.txt  Player Position - 2017.01.02-20.35.33.txt  Player Power - 2017.01.02-20.35.33.txt
UE4-Analytics-Tool/Logs/Gameplay-2017.01.02-20.35.54/: Player Forward - 2017.01.02-20.35.54.txt  Player Position - 2017.01.02-20.35.54.txt  Player Power - 2017.01.02-20.35.54.txt
UE4-Analytics-Tool/Logs/Gameplay-2017.01.09-17.52.47/: Player Forward - 2017.01.09-17.52.47.txt  Player Position - 2017.01.09-17.52.47.txt  Player Power - 2017.01.09-17.52.47.txt
UE4-Analytics-Tool/Logs/Gameplay-2017.01.09-17.56.10/: Player Forward - 2017.01.09-17.56.10.txt  (+2 more)
(+29 files in other folders)
